# hungarian_algorithm_cpp

./: CMakeLists.txt  Makefile  README.md
examples/: App.cpp  CMakeLists.txt
include/hungarian_algorithm/: HungarianAlgorithm.hpp
src/: CMakeLists.txt  HungarianAlgorithm.cpp
tests/: CMakeLists.txt  TestHungarianAlgorithm.cpp
